--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -14,19 +14,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^13.2.6",
     "@angular/common": "~13.2.2",
+    "@angular/compiler-cli": "~13.2.2",
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@ionic/angular": "^6.0.0",
+    "express": "^4.17.3",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "zone.js": "~0.11.4",
-    "@angular/cli": "^13.2.6",
-    "@angular/compiler-cli": "~13.2.2",
-    "typescript": "~4.4.4"
+    "typescript": "~4.4.4",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.3",
@@ -57,5 +59,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.5.4"
+  }
 }
