--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~13.2.2",
     "@ionic/angular": "^6.0.0",
     "express": "^4.17.3",
+    "firebase": "^9.6.9",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
