--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "~13.2.2",
     "@angular/compiler-cli": "~13.2.2",
     "@angular/core": "~13.2.2",
+    "@angular/fire": "^7.2.1",
     "@angular/forms": "~13.2.2",
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
