--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "angular-calendar": "^0.29.0",
     "express": "^4.17.3",
     "firebase": "^9.6.9",
+    "ionic": "^5.4.16",
     "moment": "^2.29.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
+    "ts-node": "~8.3.0",
     "tslib": "^2.2.0",
     "typescript": "~4.4.4",
-    "zone.js": "~0.11.4",
-    "ts-node": "~8.3.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.3",
